[package]
name = "funlock"
version = "0.1.0"
edition = "2024"

[dependencies]
cairo-rs = { version = "0.20.12", default-features = false }
env_logger = "0.11.8"
image = "0.25.6"
lexopt = "0.3.1"
log = "0.4.27"
pam-client = "0.5.0"
rand = "0.9.1"
secstr = "0.5.1"
serde = "1.0.219"
smithay-client-toolkit = { version = "0.19.2", features = ["calloop"] }
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
toml = "0.9.2"
users = "0.11.0"
wayland-client = "0.31.10"
xdg = "3.0.0"
xkbcommon = "0.7.0"
